sound player: Don't unref undefined fields

If the sound player feature is disabled, none of those fields are
instantiated which causes the crash reported in #2451

Also switch to using g_clear_pointer while we are at it

Fixes https://gitlab.gnome.org/GNOME/mutter/-/issues/2451

Part-of: <https://gitlab.gnome.org/GNOME/mutter/-/merge_requests/2706>

(cherry picked from commit 74bb480753d1a9dc53a2d0b7f7d6997e309315a2)